[package]
name = "hacker-newsletter"
description = "Get top News from Hacker News sent to your Email"
authors = ["doncato <doncato@notarobot.cyou>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
simplelog = "0.12"
rusqlite = "0.27"
lettre = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
native-tls = "0.2"
